# SLAM-XR

./: LICENSE  README.md  SLAM-XR DOCCUMENTATION.odt
include/: agents.h
maps/octo_maps/: merged_map.bt  test4.bt  test5.bt
maps/pcl_maps/: test.pcd  test1.pcd  test2.pcd  test3.pcd  test4.pcd  test5.pcd
src/: SLAM-XR.sh
src/ROS-TCP-Endpoint-main-ros2/launch/: endpoint.py
src/align_srv/: CMakeLists.txt  package.xml
src/align_srv/src/: align.cpp
src/communicator/: CMakeLists.txt  package.xml
src/communicator/include/: database.h
src/communicator/launch/: HAC-SLAM.launch.py  merger.launch.py
src/communicator/src/: align.cpp  com_node.cpp  custom_functions.cpp  load_map.cpp  navigation_node.cpp  save_map.cpp  semantic_node.cpp
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/msg/: Instance.msg  Matrix.msg  Transformation.msg
src/custom_interfaces/srv/: Align.srv  Downsample.srv  Loadmap.srv  Mapnames.srv  Savemap.srv
src/downsampler_srv/: CMakeLists.txt  package.xml
src/downsampler_srv/src/: downsample.cpp
src/octomap_mapping/octomap_server/launch/: octomap_mapping.launch.xml
src/octomap_mapping/octomap_server/src/: octomap_server.cpp
src/robot-packages/lidarslam_ros2/lidarslam/launch/: lidarslam.launch.py  robot.launch.py
src/robot-packages/lidarslam_ros2/lidarslam/param/: lidarslam.yaml
src/robot-packages/pcl_filter/: CMakeLists.txt  package.xml
src/robot-packages/pcl_filter/src/: filter_node.cpp
src/robot-packages/ps4_controller/: CMakeLists.txt  package.xml
src/robot-packages/ps4_controller/src/: ps4_controller_node.cpp
src/robot-packages/repeater/: CMakeLists.txt  package.xml
src/robot-packages/repeater/src/: repeater_node.cpp
